<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#FFFFFFFF"
              android:orientation="vertical">

    <include layout="@layout/navbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/int_child_hno"
                    android:textSize="@dimen/awb_detail_size"/>

                <EditText
                    android:id="@+id/hno_int_child_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@color/awb_detail_color"
                    android:inputType="number"
                    android:textSize="@dimen/awb_detail_size"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/int_child_pc"
                    android:textSize="@dimen/awb_detail_size"/>

                <EditText
                    android:id="@+id/pc_int_child_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@color/awb_detail_color"
                    android:textSize="@dimen/awb_detail_size"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/int_child_weight"
                    android:textSize="@dimen/awb_detail_size"/>

                <EditText
                    android:id="@+id/weight_int_child_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@color/awb_detail_color"
                    android:textSize="@dimen/awb_detail_size"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/int_child_volume"
                    android:textSize="@dimen/awb_detail_size"/>

                <EditText
                    android:id="@+id/volume_int_child_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@color/awb_detail_color"
                    android:textSize="@dimen/awb_detail_size"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/int_child_goods_en"
                    android:textSize="@dimen/awb_detail_size"/>

                <EditText
                    android:id="@+id/goods_int_child_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@color/awb_detail_color"
                    android:textSize="@dimen/awb_detail_size"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/int_child_goods_cn"
                    android:textSize="@dimen/awb_detail_size"/>

                <EditText
                    android:id="@+id/goodscn_int_child_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@color/awb_detail_color"
                    android:textSize="@dimen/awb_detail_size"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/int_child_mftstatus"
                    android:textSize="@dimen/awb_detail_size"/>

                <EditText
                    android:id="@+id/mftstatus_int_child_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@color/awb_detail_color"
                    android:textSize="@dimen/awb_detail_size"/>
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/int_update_child_btn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/int_child_updata"/>

            <Button
                android:id="@+id/int_sure_child_btn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/awb_detail_sure"
                android:visibility="gone"/>
            <Button
                android:id="@+id/int_delete_child_btn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/int_child_delete"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>