<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#FFFFFFFF"
              android:orientation="vertical">

    <include layout="@layout/navbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/awb_detail_Mawb"
                    android:textSize="@dimen/awb_detail_size"
                    android:textColor="@color/colorPrimaryDark"/>

                <EditText
                    android:id="@+id/mawb_add_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="number"
                    android:maxLength="11"
                    android:textSize="@dimen/awb_detail_size"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/awb_detail_pc"
                    android:textSize="@dimen/awb_detail_size"
                    android:textColor="@color/colorPrimaryDark"/>

                <EditText
                    android:id="@+id/pc_add_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="number"
                    android:textSize="@dimen/awb_detail_size"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/awb_detail_weight"
                    android:textSize="@dimen/awb_detail_size"
                    android:textColor="@color/colorPrimaryDark"/>

                <EditText
                    android:id="@+id/weight_add_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="@dimen/awb_detail_size"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/awb_detail_volume"
                    android:textSize="@dimen/awb_detail_size"
                    android:textColor="@color/colorPrimaryDark"/>

                <EditText
                    android:id="@+id/volume_add_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="@dimen/awb_detail_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/awb_detail_Goods"
                    android:textSize="@dimen/awb_detail_size"
                    android:textColor="@color/colorPrimaryDark"/>

                <EditText
                    android:id="@+id/goods_add_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="@dimen/awb_detail_size"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/awb_detail_businessType"
                    android:textSize="@dimen/awb_detail_size"
                    android:textColor="@color/colorPrimaryDark"/>

                <Spinner
                    android:id="@+id/awb_businesstype_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/awb_detail_Package"
                    android:textSize="@dimen/awb_detail_size"/>

                <EditText
                    android:id="@+id/package_add_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="@dimen/awb_detail_size"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/awb_detail_Dest1"
                    android:textSize="@dimen/awb_detail_size"/>

                <EditText
                    android:id="@+id/dest_add_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="@dimen/awb_detail_size"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dest2_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/awb_detail_Dest2"
                    android:textSize="@dimen/awb_detail_size"/>

                <EditText
                    android:id="@+id/dest2_add_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="@dimen/awb_detail_size"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/awb_detail_Remark"
                    android:textSize="@dimen/awb_detail_size"/>

                <EditText
                    android:id="@+id/remake_add_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="@dimen/awb_detail_size"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/awb_detail_FDate"
                    android:textSize="@dimen/awb_detail_size"
                    android:textColor="@color/colorPrimaryDark"/>

                <EditText
                    android:id="@+id/fdate_add_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="@dimen/awb_detail_size"/>
                <Button
                    android:id="@+id/date_chose_btn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="30dp"
                    android:background="@drawable/button_circle"
                    android:text="选择日期"
                    android:textSize="12dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/awb_detail_Fno"
                    android:textSize="@dimen/awb_detail_size"
                    android:textColor="@color/colorPrimaryDark"/>

                <EditText
                    android:id="@+id/fno_add_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="@dimen/awb_detail_size"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/awb_detail_Shipper"
                    android:textSize="@dimen/awb_detail_size"/>

                <EditText
                    android:id="@+id/shipper_add_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="@dimen/awb_detail_size"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/awb_detail_Consignee"
                    android:textSize="@dimen/awb_detail_size"/>

                <EditText
                    android:id="@+id/consignee_add_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="@dimen/awb_detail_size"/>
            </LinearLayout>

            <Button
                android:id="@+id/sure_add_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/awb_detail_sure"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>